--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
       </a>
     </div>
 
-    <form id="rsvp-form" name="rsvp" method="POST" data-netlify="true">
+    <form name="rsvp" method="POST" data-netlify="true">
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
       <input type="number" name="guests" placeholder="Number of Guests" required />
       <textarea name="message" placeholder="Message (optional)"></textarea>
       <button type="submit">Send RSVP</button>
+      <input type="hidden" name="form-name" value="rsvp" />
     </form>
   </div>
 
