--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </a>
     </div>
 
-  <form name="rsvp" method="POST" data-netlify="true">
+  <form name="rsvp" method="POST" data-netlify="true" action="/thank-you.html">
     <!-- 🔒 Hidden input so Netlify can identify this form -->
     <input type="hidden" name="form-name" value="rsvp" />
 
