--- a/thank-you.html
+++ b/thank-you.html
@@ -38,6 +38,7 @@
 <body>
   <h1>🎉 Thank you for RSVPing!</h1>
   <p>We’re excited to celebrate Emily’s birthday with you.</p>
+  <p>To view Emily’s wish list, click the button below.</p>
 
   <a href="https://www.amazon.com/hz/wishlist/ls/123G8XRSY7UIL?ref_=wl_share" target="_blank" class="wishlist-link">
     <img src="wishlist.png" alt="View Amazon Wish List">
