--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 
   <link rel="stylesheet" href="style.css" />
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4X01W0EBRK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4X01W0EBRK');
+</script>
+
 <body>
   <!-- Video Container -->
   <div class="video-container" id="video-wrapper">
