--- a/thank-you.html
+++ b/thank-you.html
@@ -35,6 +35,17 @@
     }
   </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4X01W0EBRK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-4X01W0EBRK');
+</script>
+
 <body>
   <h1>🎉 Thank you for RSVPing!</h1>
   <p>We’re excited to celebrate Emily’s birthday with you.</p>
